--- a/landing-router/www/manifest.json
+++ b/landing-router/www/manifest.json
@@ -10,6 +10,6 @@
   ],
   "start_url": "./index.html",
   "display": "standalone",
-  "theme_color": "#000000",
+  "theme_color": "#d4501d",
   "background_color": "#ffffff"
 }
