--- a/static/apple-app-site-association.json
+++ b/static/apple-app-site-association.json
@@ -51,5 +51,8 @@
              ]
            }
        ]
+   },
+   "webcredentials": {
+      "apps": [ "N8AGJ3QZHT.com.hushtagsapp.ios" ]
    }
 }
