Added associated domains for Apple iOS.

--- a/static/apple-app-site-association.json
+++ b/static/apple-app-site-association.json
@@ -1,5 +1,6 @@
 {
   "applinks": {
+      "apps": [],
       "details": [
            {
              "appIDs": [ "N8AGJ3QZHT.com.hushtagsapp.ios" ],
