--- a/static/apple-app-site-association.json
+++ b/static/apple-app-site-association.json
@@ -3,7 +3,7 @@
       "apps": [],
       "details": [
            {
-             "appIDs": [ "N8AGJ3QZHT.com.hushtagsapp.ios" ],
+             "appID":  "N8AGJ3QZHT.com.hushtagsapp.ios",
              "paths": [ "*" ]
        ]
    },
