--- a/static/apple-app-site-association.json
+++ b/static/apple-app-site-association.json
@@ -1,10 +1,55 @@
 {
   "applinks": {
-      "apps": [],
       "details": [
            {
-             "appID":  "N8AGJ3QZHT.com.hushtagsapp.ios",
-             "paths": [ "*" ]
+             "appIDs": [ "JCQXMWDP3V.com.hushtagsapp.ios", "N8AGJ3QZHT.com.hushtagsapp.ios" ],
+             "components": [
+               {
+                  "#": "no_universal_links",
+                  "exclude": true,
+                  "comment": "Matches any URL whose fragment equals no_universal_links and instructs the system not to open it as a universal link"
+               },
+                {
+                    "/": "/join/*",
+                    "exlcude": true,
+                    "comment": "Exclude"
+                },
+                {
+                    "/": "/notebook/*",
+                    "exlcude": true,
+                    "comment": "Exclude"
+                },
+                {
+                    "/": "/journal/*",
+                    "exlcude": true,
+                    "comment": "Exclude"
+                },
+                {
+                    "/": "/free-journal/*",
+                    "exlcude": true,
+                    "comment": "Exclude"
+                },
+                {
+                    "/": "/portal/*",
+                    "exlcude": true,
+                    "comment": "Exclude"
+                },
+                {
+                    "/": "/portal/*",
+                    "exlcude": true,
+                    "comment": "Exclude"
+                },
+                {
+                    "/": "/ios/*",
+                    "exlcude": true,
+                    "comment": "Exclude"
+                },
+               {
+                  "/": "/*",
+                  "comment": "Matches any URL that is tag"
+               }
+             ]
+           }
        ]
    },
    "webcredentials": {
